--- a/voting/.env
+++ b/voting/.env
@@ -1,1 +1,5 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://server-o78y.onrender.com/api
+
+
+
+# VITE_API_URL = http://localhost:5000
