updated server and frontend

--- a/voting/.env
+++ b/voting/.env
@@ -2,4 +2,4 @@ VITE_API_URL=https://server-o78y.onrender.com/api
 
 
 
-# VITE_API_URL = http://localhost:5000
+# VITE_API_URL = http://localhost:5000/api
